--- a/upload/index.html
+++ b/upload/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <form action="upload_file.php" method="post" enctype="multipart/form-data">
+    <form action="/upload/upload_file.php" method="post" enctype="multipart/form-data">
       <label for="file">Filename:</label>
       <input type="file" name="file" id="file" /> <br />
       <input type="submit" name="submit" value="Submit" />
