--- a/upload/index.html
+++ b/upload/index.html
@@ -1,8 +1,7 @@
 <html>
   <body>
     <form action="/upload/upload_file.php" method="post" enctype="multipart/form-data">
-      <label for="file">Filename:</label>
-      <input type="file" name="file" id="file" /> <br />
+      <input type="file" name="file" id="file" />
       <input type="submit" name="submit" value="Submit" />
     </form>
   </body>
